--- a/css/styles.css
+++ b/css/styles.css
@@ -1278,3 +1278,10 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width 1200px */
+
+/* SH custom*/
+.imgContainer{
+    float:left;
+	width: 33%;
+	border: 1px solid black;
+}
